[package]
name = "food_data_parser"
version = "0.1.0"
authors = ["pickx <pickx@pickx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0", features = ["full"] }
reqwest = { version = "0.10.1", features = ["json"] }
serde_json = { version = "1.0.44", features = ["preserve_order"] }
serde = { version = "1.0.104", features = ["derive"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
anyhow = "1.0.26"
